- fix handling of plugin tags directly followed by an else tag (Fahr, danilo)
- fix handling of $etc in the truncate modifier when $etc is longer
  than $length (Sylvinus, messju)
- fix handling of %I with mysql timestamps in the date_format modifier
  (danilo, boots)
- update smarty_core_write_file() to better recognize Windows (boots)
- emulate %R in the date_format modifier on Windows (danilo, boots)

Version 2.6.16 (Dec 1st, 2006)
-------------------------------

- fixed replacement bug in trimwhitespace output filter that was introduced
  in the last release (Spuerhund, boots)

Version 2.6.15 (Nov 30th, 2006)
-------------------------------

- change file writing semantics in smarty_core_write_file() to unlink() only
  when rename() fails or a Windows system is detected (c960657, boots) 
- update debug.tpl to xhtml 1.1 compliance, fix javascript escaping in debug
  output and apply a Smarty based color scheme (cybot, boots)
- enhance reporting precision of debug_print_var modifier (cybot, boots) 
- make html_select_date work consistently with 0000-00-00 00:00:00 and
  0000-00-00 inputs (cybot, boots)
- fix wrong handling of insert's name attribute. (messju)
- fix false replacement of "$t" inside double quotes (checat, messju)
- added support for column headings and caption element to html_table and
  updated the output to use thead/tbody elements (boots)
- fixed ordering of replacements in trimwhitespace output filter (Getty, boots)
- update mailto function plugin to work around a firefox/thunderbird
  escaping bug (elijahlofgren, boots)
- emulate %l in the date_format modifier on windows (boots) 
- fix handling of apostrophes in capitalize modifier (Alec Smecher, boots)

Version 2.6.14 (May 28th, 2006)
-------------------------------

- fix compiler bug allowing php tags in secure templates
  (boots,monte)
- un-hide hidden xml open tags (boots)
- fix handling of block-methods of registered objects (El Hombre Gris,
  messju)

Version 2.6.13 (March 9th, 2006)